--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.4.5
+  firebase_storage: ^11.0.16
+  provider: ^6.0.5
+  shared_preferences: ^2.0.20
 
 
   # The following adds the Cupertino Icons font to your application.
