--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_storage: ^11.0.16
   provider: ^6.0.5
   shared_preferences: ^2.0.20
+  pinput: ^2.2.31
 
 
   # The following adds the Cupertino Icons font to your application.
